Вестка главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -32,9 +32,6 @@
                 </ul>
             </div>
         </nav>
-    </header>
-    <main class="page-main">
-        <h1 class="visually-hidden">Туристический город Седона</h1>
 
         <section class="welcome">
             <h2 class="visually-hidden">Welcome to the gardeous Sedona</h2>
@@ -44,13 +41,15 @@
             <p>&ldquo;Becouse the grand lanyon sucks<sub>&rdquo;</sub></p>
         </section>
 
+    </header>
+    <main class="page-main">
+        <h1 class="visually-hidden">Туристический город Седона</h1>
+        <header class="page-main__header">
+            <h3 class="page-main__header--heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
+            <p class="page-main__header--text text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
+        </header>
         <section class="advantages">
             <h2 class="visually-hidden">Наши преимущества</h2>
-            <header class="advantages-header">
-                <h3 class="advantages-header__heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
-                <p class="advantages-header__text text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
-            </header>
-
             <article class="advantages-section">
                 <header class="advantages-section__header">
                     <h3 class="advantages-section__heading">Настоящий городок</h3>
