Верстка внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона: Каталог</title>
 </head>
 
-<body>
+<body class="page__body inner-page__body">
     <header class="page-header">
         <a class="page-header__logo" href="#">
             <img src="img/logotype-mobile.svg.png" alt="Главный логотип">
