Верстка внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
 
 <body class="page__body inner-page__body">
     <header class="page-header">
-        <a class="page-header__logo" href="#">
+        <a class="page-header__logo" href="index.html">
             <img src="img/logotype-mobile.svg.png" alt="Главный логотип">
         </a>
         <nav class="main-nav">
@@ -96,8 +96,10 @@
 
         <section class="page-copyright">
             <h2 class="visually-hidden">Копирайт сайта!</h2>
-            <p class="page-copyright text">Разработано</p>
-            <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+            <p class="page-copyright__text">Разработано</p>
+            <a class="page-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+                <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+            </a>
         </section>
     </footer>
 </body>
