--- a/source/index.html
+++ b/source/index.html
@@ -128,8 +128,10 @@
 
         <section class="page-copyright">
             <h2 class="visually-hidden">Копирайт сайта!</h2>
-            <p class="page-copyright text">Разработано</p>
-            <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+            <p class="page-copyright__text">Разработано</p>
+            <a class="page-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+                <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+            </a>
         </section>
 
     </footer>
