--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 
 <body class="page__body form-page__body">
     <header class="page-header">
-        <a class="page-header__logo" href="#">
+        <a class="page-header__logo" href="index.html">
             <img src="img/logotype-mobile.svg.png" alt="Главный логотип">
         </a>
         <nav class="main-nav">
@@ -109,7 +109,7 @@
                 <legend class="page-form__section--legend">Опишите свои эмоции:</legend>
                 <textarea class="textarea-section__text" name="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
-            <button class="page-form__button" type="submit">Отправить отзыв</button>
+            <button class="button page-form__button" type="submit">Отправить отзыв</button>
         </form>
     </main>
 
@@ -124,12 +124,26 @@
             <a class="social-link " href="https://www.youtube.com/ ">Youtube</a>
         </section>
 
-        <section class="page-copyright ">
-            <h2 class="visually-hidden ">Копирайт сайта!</h2>
-            <p class="page-copyright text ">Разработано</p>
-            <img class="page-copyright__icon " src="img/icon-copyright.svg " width="27 " height="34 " alt="Картинка копирайта ">
+        <section class="page-copyright">
+            <h2 class="visually-hidden">Копирайт сайта!</h2>
+            <p class="page-copyright__text">Разработано</p>
+            <a class="page-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+                <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
+            </a>
         </section>
     </footer>
+
+    <section class="visually-hidden modal modal-failure">
+        <h2 class="modal-heading">Что-то пошло не так!</h2>
+        <p class="modal-content">Проверьте поля,выделенные красным,скорее всего вы забыли из заполныть</p>
+        <button class="button modal-button modal-failure__button" type="button">ОК</button>
+    </section>
+
+    <section class="visually-hidden modal modal-success">
+        <h2 class="modal-heading">Ваш отзыв отправлен!</h2>
+        <p class="modal-content">Спасибо за ваше участие,ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+        <button class="button modal-button modal-success__button" type="button">Закрыть окно</button>
+    </section>
 </body>
 
 </html>
