Верстка внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html class="inner-page" lang="ru">
+<html class="page" lang="ru">
 
 <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона: Каталог</title>
+    <title>HTML Academy: Седона</title>
 </head>
 
-<body class="page__body inner-page__body">
+<body class="page__body">
     <header class="page-header">
-        <a class="page-header__logo" href="index.html">
+        <a class="page-header__logo" href="#">
             <img src="img/logotype-mobile.svg.png" alt="Главный логотип">
         </a>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
+                <span class="visually-hidden">Открыть меню</span>
+            </button>
             <div class="main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
-                        <a href="#">Главная</a>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Фото и видео</a>
+                        <a href="catalog.html">Фото и видео</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Форма отзыва</a>
+                        <a href="form.html">Форма отзыва</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Html Academy</a>
+                        <a href="https://htmlacademy.ru/" target="_blank">Html Academy</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main class="page-main inner-main">
-        <h1 class="visually-hidden">Страница галерии</h1>
+        <h1 class="visually-hidden">Страница галерии и видео</h1>
         <header class="page-main__header">
-            <h3 class="page-main__header--heading">Фото и видео</h3>
-            <p class="page-main__header--text text">Не можете решится на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+            <h3 class="page-main__header-heading">Фото и видео</h3>
+            <p class="page-main__header-text text">Не можете решится на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </header>
 
         <section class="gallery">
@@ -48,7 +48,7 @@
                         <img class="gallery__img" src="img/gallery-img-mobile-1.jpg" width="280" height="280" alt="Картинка неродные просторы">
                         <figcaption class="gallery-figcaption">Неродные просторы</figcaption>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor--name">Борис</cite></p>
+                    <p class="gallery__autor">Автор фото:<cite class="gallery__autor-name">Борис</cite></p>
                     <p class="gallery__like">1350</p>
                 </li>
                 <li class="gallery__item">
@@ -56,7 +56,7 @@
                         <img class="gallery__img" src="img/gallery-img-mobile-2.jpg" width="280" height="280" alt="Картинка Местная растительность">
                         <figcaption class="gallery-figcaption">Местная растительность</figcaption>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor--name">Сергей</cite></p>
+                    <p class="gallery__autor">Автор фото:<cite class="gallery__autor-name">Сергей</cite></p>
                     <p class="gallery__like">143</p>
                 </li>
                 <li class="gallery__item">
@@ -64,7 +64,7 @@
                         <img class="gallery__img" src="img/gallery-img-mobile-3.jpg" width="280" height="280" alt="Картинка дорога на север">
                         <figcaption class="gallery-figcaption">Дорога на север</figcaption>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor--name">Петр</cite></p>
+                    <p class="gallery__autor">Автор фото:<cite class="gallery__autor-name">Петр</cite></p>
                     <p class="gallery__like">96</p>
                 </li>
                 <li class="gallery__item">
@@ -72,7 +72,7 @@
                         <img class="gallery__img" src="img/gallery-img-mobile-4.jpg" width="280" height="280" alt="Картинка мост дьявола">
                         <figcaption class="gallery-figcaption">Мост дьвола</figcaption>
                     </figure>
-                    <p class="gallery__autor">Автор фото: <cite class="gallery__autor--name">Антон</cite></p>
+                    <p class="gallery__autor">Автор фото:<cite class="gallery__autor-name">Антон</cite></p>
                     <p class="gallery__like">254</p>
                 </li>
             </ul>
@@ -89,9 +89,9 @@
 
         <section class="page-footer__social">
             <h2 class="visually-hidden">Давайте дружить!</h2>
-            <a class="social-link" href="https://twitter.com/?lang=ru">Twitter</a>
-            <a class="social-link" href="https://www.facebook.com/">Facebook</a>
-            <a class="social-link" href="https://www.youtube.com/">Youtube</a>
+            <a class="social-link" href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+            <a class="social-link" href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a class="social-link" href="https://www.youtube.com/" target="_blank">Youtube</a>
         </section>
 
         <section class="page-copyright">
@@ -101,7 +101,6 @@
                 <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
             </a>
         </section>
-
     </footer>
 </body>
 
