--- a/source/form.html
+++ b/source/form.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html class="form-page" lang="ru">
+<html class="page" lang="ru">
 
 <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона: Каталог</title>
+    <title>HTML Academy: Седона</title>
 </head>
 
-<body class="page__body form-page__body">
+<body class="page__body">
     <header class="page-header">
-        <a class="page-header__logo" href="index.html">
+        <a class="page-header__logo" href="#">
             <img src="img/logotype-mobile.svg.png" alt="Главный логотип">
         </a>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
+                <span class="visually-hidden">Открыть меню</span>
+            </button>
             <div class="main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
-                        <a href="#">Главная</a>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Фото и видео</a>
+                        <a href="catalog.html">Фото и видео</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Форма отзыва</a>
+                        <a href="form.html">Форма отзыва</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Html Academy</a>
+                        <a href="https://htmlacademy.ru/" target="_blank">Html Academy</a>
                     </li>
                 </ul>
             </div>
@@ -37,38 +37,38 @@
     <main class="page-main form-main">
         <h1 class="visually-hidden">Страница формы</h1>
         <header class="page-main__header">
-            <h3 class="page-main__header--heading">Оставьте свой отзыв</h3>
-            <p class="page-main__header--text text">Помогите нашим отелям стать лучше!Оставьте отзыв о них,а также о посещенных вами достопримечательностях</p>
+            <h3 class="page-main__header-heading">Оставьте свой отзыв</h3>
+            <p class="page-main__header-text">Помогите нашим отелям стать лучше!Оставьте отзыв о них,а также о посещенных вами достопримечательностях</p>
         </header>
         <form class="page-form" action="https://echo.htmlacademy.ru" method="GET">
             <fieldset class="page-form__section presents-section">
-                <legend class="page-form__section--legend">Представьтес:</legend>
+                <legend class="page-form__section-legend">Представьтесь:</legend>
                 <p class="fieldset-line presents-section__line">
                     <label for="name">Имя<sup>*</sup>:</label>
-                    <input class="presents-section__name" id="name" type="text" name="name" placeholder="Петр">
+                    <input class="presents-section__input" id="name" type="text" name="name" placeholder="Петр">
                 </p>
                 <p class="fieldset-line presents-section__line">
                     <label for="lastname">Фамилия<sup>*</sup>:</label>
-                    <input class="presents-section__lastname" id="lastname" type="text" name="lastname" placeholder="Иванов">
+                    <input class="presents-section__input" id="lastname" type="text" name="lastname" placeholder="Иванов">
                 </p>
                 <p class="fieldset-line presents-section__line">
                     <label for="patronymic">Отчество<sup>*</sup>:</label>
-                    <input class="presents-section__patronymic" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
+                    <input class="presents-section__input" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
                 </p>
             </fieldset>
             <fieldset class="page-form-section contact-section">
-                <legend class="page-form__section--legend">Контактная информация:</legend>
+                <legend class="page-form__section-legend">Контактная информация:</legend>
                 <p class="fieldset-line contact-section__line">
                     <label for="phone">Контактный телефон<sup>*</sup>:</label>
-                    <input class="contact-section__phone" id="phone" type="tel" name="phone" placeholder="Введите телефон">
+                    <input class="contact-section__input" id="phone" type="tel" name="phone" placeholder="Введите телефон">
                 </p>
                 <p class="fieldset-line contact-section__line">
                     <label for="email">Электронная почта<sup>*</sup>:</label>
-                    <input class="contact-section__email" id="email" type="email" name="email" placeholder="Введите e-mail">
+                    <input class="contact-section__input" id="email" type="email" name="email" placeholder="Введите e-mail">
                 </p>
             </fieldset>
             <fieldset class="page-form-section filter-radio">
-                <legend class="page-form__section--legend">Ваше общее впечатление:</legend>
+                <legend class="page-form__section-legend">Ваше общее впечатление:</legend>
                 <ul class="filter-radio__list">
                     <li class="filter-radio__item">
                         <input class="filter-radio__input visually-hidden" id="positive" type="radio" name="impression" value="positive">
@@ -85,7 +85,7 @@
                 </ul>
             </fieldset>
             <fieldset class="page-form-section filter-checkbox">
-                <legend class="page-form__section--legend">Ваше общее впечатление:</legend>
+                <legend class="page-form__section-legend">Ваше общее впечатление:</legend>
                 <ul class="filter-checkbox__list">
                     <li class="filter-checkbox__item">
                         <input class="filter-checkbox__input visually-hidden" id="bridge" type="checkbox" name="Devil Bridge">
@@ -106,22 +106,22 @@
                 </ul>
             </fieldset>
             <fieldset class="page-form-section textarea-section">
-                <legend class="page-form__section--legend">Опишите свои эмоции:</legend>
+                <legend class="page-form__section-legend">Опишите свои эмоции:</legend>
                 <textarea class="textarea-section__text" name="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
             <button class="button page-form__button" type="submit">Отправить отзыв</button>
         </form>
     </main>
 
-    <footer class="page-footer ">
-        <h2 class="visually-hidden ">Футер сайта</h2>
-        <a class="footer-text " href="# ">&#35;Visitsedona</a>
+    <footer class="page-footer">
+        <h2 class="visually-hidden">Футер сайта</h2>
+        <a class="footer-text" href="#">&#35;Visitsedona</a>
 
-        <section class="page-footer__social ">
-            <h2 class="visually-hidden ">Давайте дружить!</h2>
-            <a class="social-link " href="https://twitter.com/?lang=ru ">Twitter</a>
-            <a class="social-link " href="https://www.facebook.com/ ">Facebook</a>
-            <a class="social-link " href="https://www.youtube.com/ ">Youtube</a>
+        <section class="page-footer__social">
+            <h2 class="visually-hidden">Давайте дружить!</h2>
+            <a class="social-link" href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+            <a class="social-link" href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a class="social-link" href="https://www.youtube.com/" target="_blank">Youtube</a>
         </section>
 
         <section class="page-copyright">
@@ -132,18 +132,6 @@
             </a>
         </section>
     </footer>
-
-    <section class="visually-hidden modal modal-failure">
-        <h2 class="modal-heading">Что-то пошло не так!</h2>
-        <p class="modal-content">Проверьте поля,выделенные красным,скорее всего вы забыли из заполныть</p>
-        <button class="button modal-button modal-failure__button" type="button">ОК</button>
-    </section>
-
-    <section class="visually-hidden modal modal-success">
-        <h2 class="modal-heading">Ваш отзыв отправлен!</h2>
-        <p class="modal-content">Спасибо за ваше участие,ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
-        <button class="button modal-button modal-success__button" type="button">Закрыть окно</button>
-    </section>
 </body>
 
 </html>
