--- a/source/index.html
+++ b/source/index.html
@@ -13,21 +13,21 @@
         </a>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button">
-              <span class="visually-hidden">Открыть меню</span>
+                <span class="visually-hidden">Открыть меню</span>
             </button>
             <div class="main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
-                        <a href="#">Главная</a>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Фото и видео</a>
+                        <a href="catalog.html">Фото и видео</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Форма отзыва</a>
+                        <a href="form.html">Форма отзыва</a>
                     </li>
                     <li class="site-list__item">
-                        <a href="#">Html Academy</a>
+                        <a href="https://htmlacademy.ru/" target="_blank">Html Academy</a>
                     </li>
                 </ul>
             </div>
@@ -45,39 +45,37 @@
     <main class="page-main">
         <h1 class="visually-hidden">Туристический город Седона</h1>
         <header class="page-main__header">
-            <h3 class="page-main__header--heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
-            <p class="page-main__header--text text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
+            <h3 class="page-main__header-heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
+            <p class="page-main__header-text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
         </header>
         <section class="advantages">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <article class="advantages-section">
                 <header class="advantages-section__header">
                     <h3 class="advantages-section__heading">Настоящий городок</h3>
-                    <p class="advantages-section__header--number text-width-lines"> &#8470;1</p>
-                    <p class="advantages-section__header--text text">Седона не аттракцион для туристов,там течет своя жизнь</p>
+                    <p class="advantages-section__header-number">№1</p>
+                    <p class="advantages-section__header-text">Седона не аттракцион для туристов,там течет своя жизнь</p>
                 </header>
                 <img class="advantages-section__img" src="img/advantages-img1.jpg" width="320" height="260" alt="Настоящий городок первая картинка">
-                <ul class="advantages-section__list">
-                    <li class="advantages-section__item">
-                        <h3 class="advantages-section__item--heading">Жилье</h3>
-                        <p class="advantages-section__item--text text">Рекомендуем пожить в настоящем мотелеб все как в кино!</p>
-                    </li>
-                    <li class="advantages-section__item">
-                        <h3 class="advantages-section__item--heading">Сувениры</h3>
-                        <p class="advantages-section__item--text text">Не только Китайского, но и местного производства!</p>
-                    </li>
-                    <li class="advantages-list__item">
-                        <h3 class="advantages-section__item--heading">Еда</h3>
-                        <p class="advantages-section__item--text text">Всегда заказывайте фирменный бургер,вы не разочеруетесь!</p>
-                    </li>
-                </ul>
+                <div class="advantages-section__item">
+                    <h3 class="advantages-section__item-heading">Жилье</h3>
+                    <p class="advantages-section__item-text">Рекомендуем пожить в настоящем мотелеб все как в кино!</p>
+                </div>
+                <div class="advantages-section__item">
+                    <h3 class="advantages-section__item-heading">Сувениры</h3>
+                    <p class="advantages-section__item-text">Не только Китайского, но и местного производства!</p>
+                </div>
+                <div class="advantages-list__item">
+                    <h3 class="advantages-section__item-heading">Еда</h3>
+                    <p class="advantages-section__item-text">Всегда заказывайте фирменный бургер,вы не разочеруетесь!</p>
+                </div>
             </article>
 
             <article class="advantages-section">
                 <header class="advantages-section__header">
                     <h3 class="advantages-section__heading">Там есть мост дьявола</h3>
-                    <p class="advantages-section__header--number text-width-lines"> &#8470;2</p>
-                    <p class="advantages-section__header--text text">Да,по нему можно пройти! Если вы осмелитесь,конечно</p>
+                    <p class="advantages-section__header-number">№2</p>
+                    <p class="advantages-section__header-text">Да,по нему можно пройти! Если вы осмелитесь,конечно</p>
                 </header>
                 <img class="advantages-section__img" src="img/advantages-img2.jpg" width="320" height="260" alt="Настоящий городок первая картинка">
             </article>
@@ -85,32 +83,32 @@
             <article class="advantages-section">
                 <header class="advantages-section__header">
                     <h3 class="advantages-section__heading">Небольшая площадь</h3>
-                    <p class="advantages-section__header--number text-width-lines"> &#8470;3</p>
-                    <p class="advantages-section__header--text text">Все интересные места находятся очень близко</p>
+                    <p class="advantages-section__header-number">№3</p>
+                    <p class="advantages-section__header-text">Все интересные места находятся очень близко</p>
                 </header>
             </article>
 
             <article class="advantages-section">
                 <header class="advantages-section__header">
                     <h3 class="advantages-section__heading">Красивая дорога</h3>
-                    <p class="advantages-section__header--number text-width-lines"> &#8470;4</p>
-                    <p class="advantages-section__header--text text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                    <p class="advantages-section__header-number">№4</p>
+                    <p class="advantages-section__header-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                 </header>
             </article>
 
             <article class="advantages-section">
                 <header class="advantages-section__header">
                     <h3 class="advantages-section__heading">Мало туристов</h3>
-                    <p class="advantages-section__header--number text-width-lines"> &#8470;5</p>
-                    <p class="advantages-section__header--text text">Большинство едет в Гранд Каньон и толпится там</p>
+                    <p class="advantages-section__header-number">№5</p>
+                    <p class="advantages-section__header-text">Большинство едет в Гранд Каньон и толпится там</p>
                 </header>
             </article>
         </section>
 
         <section class="about-us">
             <h2 class="about-us__heading">Заинтересовались?</h2>
-            <p class="about-us__text text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="about-us__link link" href="#">Найти гостиницу</a>
+            <p class="about-us__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="about-us__link" href="#">Найти гостиницу</a>
             <img src="img/map-mobile.jpg" width="320" height="350" alt="Карта">
         </section>
     </main>
@@ -121,9 +119,9 @@
 
         <section class="page-footer__social">
             <h2 class="visually-hidden">Давайте дружить!</h2>
-            <a class="social-link" href="https://twitter.com/?lang=ru">Twitter</a>
-            <a class="social-link" href="https://www.facebook.com/">Facebook</a>
-            <a class="social-link" href="https://www.youtube.com/">Youtube</a>
+            <a class="social-link" href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+            <a class="social-link" href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a class="social-link" href="https://www.youtube.com/" target="_blank">Youtube</a>
         </section>
 
         <section class="page-copyright">
@@ -133,7 +131,6 @@
                 <img class="page-copyright__icon" src="img/icon-copyright.svg" width="27" height="34" alt="Картинка копирайта">
             </a>
         </section>
-
     </footer>
 </body>
 
