--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
 
 <body class="page__body">
     <header class="page-header">
         <a class="page-header__logo" href="#">
-            <img src="img/logotype-mobile.svg.png" alt="Главный логотип">
+            <img src="img/logotype-mobile.png" alt="Главный логотип">
         </a>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button">
