--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
             <button class="main-nav__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
             </button>
-            <div class="main-nav__wrapper">
+            <div class="visually-hidden main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
                         <a href="index.html">Главная</a>
@@ -52,8 +52,8 @@
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Неродные просторы</h3>
                     <figure class="gallery__figure">
-                        <a class="gallery__img-link" href="img/gallery-img-mobile-1.jpg">
-                            <img class="gallery__img" src="img/gallery-img-mobile-1.jpg" width="280" height="280" alt="Картинка неродные просторы" target="_blank">
+                        <a class="gallery__img-link" href="img/gallery-img-mobile-1.jpg" target="_blank">
+                            <img class="gallery__img" src="img/gallery-img-mobile-1.jpg" width="280" height="280" alt="Картинка неродные просторы">
                         </a>
                         <figcaption class="gallery-figcaption">Неродные просторы</figcaption>
                     </figure>
@@ -63,8 +63,8 @@
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Местная растительность</h3>
                     <figure class="gallery__figure">
-                        <a class="gallery__img-link" href="img/gallery-img-mobile-2.jpg">
-                            <img class="gallery__img" src="img/gallery-img-mobile-2.jpg" width="280" height="280" alt="Картинка Местная растительность" target="_blank">
+                        <a class="gallery__img-link" href="img/gallery-img-mobile-2.jpg" target="_blank">
+                            <img class="gallery__img" src="img/gallery-img-mobile-2.jpg" width="280" height="280" alt="Картинка Местная растительность">
                         </a>
                         <figcaption class="gallery-figcaption">Местная растительность</figcaption>
                     </figure>
@@ -74,8 +74,8 @@
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Дорога на север</h3>
                     <figure class="gallery__figure">
-                        <a class="gallery__img-link" href="img/gallery-img-mobile-3.jpg">
-                            <img class="gallery__img" src="img/gallery-img-mobile-3.jpg" width="280" height="280" alt="Картинка дорога на север" target="_blank">
+                        <a class="gallery__img-link" href="img/gallery-img-mobile-3.jpg" target="_blank">
+                            <img class="gallery__img" src="img/gallery-img-mobile-3.jpg" width="280" height="280" alt="Картинка дорога на север">
                         </a>
                         <figcaption class="gallery-figcaption">Дорога на север</figcaption>
                     </figure>
@@ -85,8 +85,8 @@
                 <article class="gallery__item">
                     <h3 class="visually-hidden gallery__item-heading">Секция картинки Мост дьвола</h3>
                     <figure class="gallery__figure">
-                        <a class="gallery__img-link" href="img/gallery-img-mobile-4.jpg">
-                            <img class="gallery__img" src="img/gallery-img-mobile-4.jpg" width="280" height="280" alt="Картинка мост дьявола" target="_blank">
+                        <a class="gallery__img-link" href="img/gallery-img-mobile-4.jpg" target="_blank">
+                            <img class="gallery__img" src="img/gallery-img-mobile-4.jpg" width="280" height="280" alt="Картинка мост дьявола">
                         </a>
                         <figcaption class="gallery-figcaption">Мост дьвола</figcaption>
                     </figure>
