--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
             <button class="main-nav__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
             </button>
-            <div class="main-nav__wrapper">
+            <div class="visually-hidden main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
                         <a href="index.html">Главная</a>
@@ -59,15 +59,15 @@
                 </header>
                 <img class="advantages-section__img" src="img/advantages-img1.jpg" width="320" height="260" alt="Настоящий городок первая картинка">
                 <div class="advantages-section__item">
-                    <h3 class="advantages-section__item-heading">Жилье</h3>
+                    <h3 class="advantages-section__item-heading advantages-section__item-heading--house">Жилье</h3>
                     <p class="advantages-section__item-text">Рекомендуем пожить в настоящем мотелеб все как в кино!</p>
                 </div>
                 <div class="advantages-section__item">
-                    <h3 class="advantages-section__item-heading">Сувениры</h3>
+                    <h3 class="advantages-section__item-heading advantages-section__item-heading--gift">Сувениры</h3>
                     <p class="advantages-section__item-text">Не только Китайского, но и местного производства!</p>
                 </div>
                 <div class="advantages-section__item">
-                    <h3 class="advantages-section__item-heading">Еда</h3>
+                    <h3 class="advantages-section__item-heading advantages-section__item-heading--burger">Еда</h3>
                     <p class="advantages-section__item-text">Всегда заказывайте фирменный бургер, вы не разочеруетесь!</p>
                 </div>
             </article>
