--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
             <button class="main-nav__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
             </button>
-            <div class="main-nav__wrapper">
+            <div class="visually-hidden main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
                         <a href="index.html">Главная</a>
@@ -49,22 +49,22 @@
         <form class="page-form" action="https://echo.htmlacademy.ru" method="GET">
             <fieldset class="page-form__section presents-section">
                 <legend class="page-form__section-legend">Представьтесь:</legend>
-                <p class="fieldset-line presents-section__line">
+                <div class="fieldset-line presents-section__line">
                     <label class="presents-section__label" for="name">Имя<sup>*</sup>:</label>
                     <input class="fieldset-line__input presents-section__input" id="name" type="text" name="name" placeholder="Петр">
-                </p>
-                <p class="fieldset-line presents-section__line">
+                </div>
+                <div class="fieldset-line presents-section__line">
                     <label class="presents-section__label" for="lastname">Фамилия<sup>*</sup>:</label>
                     <input class="fieldset-line__input presents-section__input" id="lastname" type="text" name="lastname" placeholder="Иванов">
-                </p>
-                <p class="fieldset-line presents-section__line">
+                </div>
+                <div class="fieldset-line presents-section__line">
                     <label class="presents-section__label" for="patronymic">Отчество<sup>*</sup>:</label>
                     <input class="fieldset-line__input presents-section__input" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
-                </p>
+                </div>
             </fieldset>
             <fieldset class="page-form__section contact-section">
                 <legend class="page-form__section-legend">Контактная информация:</legend>
-                <p class="fieldset-line contact-section__line">
+                <div class="fieldset-line contact-section__line">
                     <label class="contact-section__label" for="phone">Контактный телефон<sup>*</sup>:</label>
                     <div class="contact-section__input-content">
                         <input class="fieldset-line__input contact-section__input contact-section__input-phone" id="phone" type="tel" name="phone" placeholder="Введите телефон">
@@ -72,8 +72,8 @@
                             <img class="conect-section__icon" src="img/icon-phone.svg" width="18" height="18" alt="Иконка телефона">
                         </div>
                     </div>
-                </p>
-                <p class="fieldset-line contact-section__line">
+                </div>
+                <div class="fieldset-line contact-section__line">
                     <label class="contact-section__label" for="email">Электронная почта<sup>*</sup>:</label>
                     <div class="contact-section__input-content">
                         <input class="fieldset-line__input contact-section__input contact-section__input-email" id="email" type="email" name="email" placeholder="Введите e-mail">
@@ -81,44 +81,43 @@
                             <img class="conect-section__icon" src="img/icon-email.svg" width="16" height="12" alt="Иконка почты">
                         </div>
                     </div>
-
-                </p>
+                </div>
             </fieldset>
             <fieldset class="page-form__section filter-radio">
                 <legend class="page-form__section-legend">Ваше общее впечатление:</legend>
                 <div class="filter-radio__content">
                     <div class="filter-radio__item">
                         <input class="filter-radio__input visually-hidden" id="positive" type="radio" name="impression" value="positive">
-                        <label for="positive">Скорее положительное</label>
+                        <label class="filter-radio__label" for="positive">Скорее положительное</label>
                     </div>
                     <div class="filter-radio__item">
                         <input class="filter-radio__input visually-hidden" id="negative" type="radio" name="impression" value="negative">
-                        <label for="negative">Скорее отрицательное</label>
+                        <label class="filter-radio__label" for="negative">Скорее отрицательное</label>
                     </div>
                     <div class="filter-radio__item">
                         <input class="filter-radio__input visually-hidden" id="neutral" type="radio" name="impression" value="neutral">
-                        <label for="neutral">Затрудняюсь ответить</label>
+                        <label class="filter-radio__label" for="neutral">Затрудняюсь ответить</label>
                     </div>
                 </div>
             </fieldset>
             <fieldset class="page-form__section filter-checkbox">
-                <legend class="page-form__section-legend">Ваше общее впечатление:</legend>
+                <legend class="page-form__section-legend">посещенные достопримечательности:</legend>
                 <div class="filter-checkbox__content">
                     <div class="filter-checkbox__item">
                         <input class="filter-checkbox__input visually-hidden" id="bridge" type="checkbox" name="Devil Bridge">
-                        <label for="bridge">Мост Дьявола</label>
+                        <label class="filter-checkbox__label" for="bridge">Мост Дьявола</label>
                     </div>
                     <div class="filter-checkbox__item">
                         <input class="filter-checkbox__input visually-hidden" id="mount" type="checkbox" name="Mount Bell">
-                        <label for="mount">Гора-Колокол</label>
+                        <label class="filter-checkbox__label" for="mount">Гора-Колокол</label>
                     </div>
                     <div class="filter-checkbox__item">
                         <input class="filter-checkbox__input visually-hidden" id="park" type="checkbox" name="Slide Park">
-                        <label for="park">Слайд-парк</label>
+                        <label class="filter-checkbox__label" for="park">Слайд-парк</label>
                     </div>
                     <div class="filter-checkbox__item">
                         <input class="filter-checkbox__input visually-hidden" id="rocks" type="checkbox" name="Red Rocks">
-                        <label for="rocks">Красные скалы</label>
+                        <label class="filter-checkbox__label filter-checkbox__label-end" for="rocks">Красные скалы</label>
                     </div>
                 </div>
             </fieldset>
@@ -126,7 +125,9 @@
                 <legend class="page-form__section-legend">Опишите свои эмоции:</legend>
                 <textarea class="textarea-section__text" name="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
+
             <button class="button page-form__button" type="submit">Отправить отзыв</button>
+
         </form>
     </main>
 
