--- a/source/form.html
+++ b/source/form.html
@@ -125,9 +125,7 @@
                 <legend class="page-form__section-legend">Опишите свои эмоции:</legend>
                 <textarea class="textarea-section__text" name="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
-
             <button class="button page-form__button" type="submit">Отправить отзыв</button>
-
         </form>
     </main>
 
@@ -156,6 +154,18 @@
             </a>
         </section>
     </footer>
+
+    <section class="modal modal-failure">
+        <h2 class="modal__heading">Что-то пошло не так!</h2>
+        <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="modal__button">ok</button>
+    </section>
+
+    <section class="modal modal-success">
+        <h2 class="modal__heading">Ваш отзыв отправлен!</h2>
+        <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+        <button class="modal__button">Закрыт окно</button>
+    </section>
 </body>
 
 </html>
